# aptocracy-servers

./: .gitignore  Cargo.toml  README.md  fullnode.example.yaml  start_script.sh
aptocracy-script-execution/: start_script.sh
aptocracy/src/: graphql.rs
aptocracy/src/aptocracy/: aptocracy.rs  members.rs
aptocracy/src/proposals/: proposal.rs
aptos-node/: Cargo.toml
crates/indexer/: Cargo.toml
crates/indexer/src/: runtime.rs  schema.rs
crates/indexer/src/indexer/: tailer.rs  transaction_processor.rs
crates/indexer/src/models/coin_models/: coin_activities.rs
crates/indexer/src/processors/: default_processor.rs
